--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "^10.32"
+        "php": "^8.1",
+        "laravel/ui": "4.2.2",
+        "tightenco/ziggy": "1.8.1",
+        "inertiajs/inertia-laravel": "0.6.11",
+        "illuminate/support": "^10.32",
+        "la09r/web-fullstack-starter-kit-ui-vue-inertia": "^10.0"
     },
     "autoload": {
         "psr-4": {
